--- a/src/css/style.css
+++ b/src/css/style.css
@@ -403,6 +403,10 @@ li {
 .collapse__dropdown__content {
   background-color: #f7f7f7;
   width: 100%;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   border-radius: 5px;
 }
 @media screen and (min-width: 769px) {
@@ -410,7 +414,7 @@ li {
     width: 100%;
   }
 }
-.collapse__dropdown__content p {
+.collapse__dropdown__content div, .collapse__dropdown__content p {
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
